# SamsungWidgetsLibary

./: README.md  example.py  pyproject.toml
samsung_widgets/: __init__.py  samsung_widgets.py
